--- a/pet-clinic/pom.xml
+++ b/pet-clinic/pom.xml
@@ -27,6 +27,21 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>8</java.version>
 	</properties>
-
 	
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<configuration>
+			      <goals>install</goals>
+			    </configuration>
+			</plugin>
+		</plugins>
+	</build>
+	
+	<scm>
+		<developerConnection>scm:git:https://github.com/nelsonandredias/SpringBoot-PetClinic.git</developerConnection>
+		<tag>HEAD</tag>
+	</scm>
 </project>
