--- a/pet-clinic/pet-clinic-data/pom.xml
+++ b/pet-clinic/pet-clinic-data/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.polarising</groupId>
 		<artifactId>pet-clinic</artifactId>
-		<version>0.0.2-SNAPSHOT</version>
+		<version>0.0.2</version>
 	</parent>
 	<artifactId>pet-clinic-data</artifactId>
 	
