--- a/pet-clinic/pet-clinic-web/pom.xml
+++ b/pet-clinic/pet-clinic-web/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.polarising</groupId>
 		<artifactId>pet-clinic</artifactId>
-		<version>0.0.2-SNAPSHOT</version>
+		<version>0.0.2</version>
 	</parent>
 	<artifactId>pet-clinic-web</artifactId>
 	
@@ -16,7 +16,7 @@
 		<dependency>
 			<groupId>com.polarising</groupId>
 			<artifactId>pet-clinic-data</artifactId>
-			<version>0.0.2-SNAPSHOT</version>
+			<version>0.0.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
