--- a/pet-clinic/pom.xml
+++ b/pet-clinic/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>com.polarising</groupId>
 	<artifactId>pet-clinic</artifactId>
-	<version>0.0.2-SNAPSHOT</version>
+	<version>0.0.2</version>
 	<name>pet-clinic</name>
 	<description>Spring Boot Pet clinic project</description>
 	
@@ -41,6 +41,6 @@
 	
 	<scm>
 		<developerConnection>scm:git:https://github.com/nelsonandredias/SpringBoot-PetClinic.git</developerConnection>
-		<tag>HEAD</tag>
+		<tag>pet-clinic-0.0.2</tag>
 	</scm>
 </project>
