--- a/pet-clinic/pom.xml
+++ b/pet-clinic/pom.xml
@@ -32,8 +32,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
 				<configuration>
-			      <goals>install</goals>
-			      <autoVersionSubmodules>true</autoVersionSubmodules>
+			     <!--   <goals>install</goals>
+			      <autoVersionSubmodules>true</autoVersionSubmodules>-->
+			      <skip>true</skip>
 			    </configuration>
 			</plugin>
 		</plugins>
